src/snapshots/ruff__linter__tests__F503_F50x.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PercentFormatExpectedSequence
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 20
  fix: ~

