src/snapshots/ruff__linter__tests__F504_F504.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    PercentFormatExtraNamedArguments:
      - b
  location:
    row: 3
    column: 14
  end_location:
    row: 3
    column: 34
  fix: ~
- kind:
    PercentFormatExtraNamedArguments:
      - x
  location:
    row: 6
    column: 14
  end_location:
    row: 6
    column: 34
  fix: ~

