src/snapshots/ruff__linter__tests__F504_F50x.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    PercentFormatExtraNamedArguments:
      - baz
  location:
    row: 8
    column: 10
  end_location:
    row: 8
    column: 32
  fix: ~

