src/snapshots/ruff__linter__tests__F505_F50x.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    PercentFormatMissingArgument:
      - bar
  location:
    row: 7
    column: 10
  end_location:
    row: 7
    column: 14
  fix: ~

