src/snapshots/ruff__linter__tests__F507_F50x.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    PercentFormatPositionalCountMismatch:
      - 2
      - 1
  location:
    row: 5
    column: 8
  end_location:
    row: 5
    column: 14
  fix: ~
- kind:
    PercentFormatPositionalCountMismatch:
      - 2
      - 3
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 19
  fix: ~

