src/snapshots/ruff__linter__tests__F508_F50x.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: PercentFormatStarRequiresSequence
  location:
    row: 11
    column: 11
  end_location:
    row: 11
    column: 27
  fix: ~

