src/snapshots/ruff__linter__tests__F509_F50x.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    PercentFormatUnsupportedFormatCharacter: j
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 11
  fix: ~

