src/snapshots/ruff__linter__tests__F522_F522.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    StringDotFormatExtraNamedArguments:
      - bar
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 21
  fix: ~
- kind:
    StringDotFormatExtraNamedArguments:
      - spam
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 34
  fix: ~
- kind:
    StringDotFormatExtraNamedArguments:
      - eggs
      - ham
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 51
  fix: ~

